[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Vladislav Gorokhov <gvsnbala@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
httpx = "^0.23.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
mypy = "^0.982"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
